[gd_scene load_steps=2 format=3 uid="uid://dul6vifv84a2o"]

[ext_resource type="Script" path="res://scripts/gui.gd" id="1_mtiic"]

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_mtiic")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_right = 200.0
offset_bottom = 360.0

[node name="ResourcesVBox" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
alignment = 1

[node name="Dirt" type="Label" parent="ScrollContainer/ResourcesVBox"]
layout_mode = 2
text = "Dirt: 0"

[node name="Rock" type="Label" parent="ScrollContainer/ResourcesVBox"]
layout_mode = 2
text = "Rock: 0"

[node name="Iron" type="Label" parent="ScrollContainer/ResourcesVBox"]
layout_mode = 2
text = "Iron: 0"

[node name="Copper" type="Label" parent="ScrollContainer/ResourcesVBox"]
layout_mode = 2
text = "Copper: 0"

[node name="Aluminum" type="Label" parent="ScrollContainer/ResourcesVBox"]
layout_mode = 2
text = "Aluminium: 0"

[node name="Cobalt" type="Label" parent="ScrollContainer/ResourcesVBox"]
layout_mode = 2
text = "Cobalt: 0"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -70.0
offset_right = 50.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Start"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -37.5
offset_right = 320.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Drill the core!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
